--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="#works">Pictures</a></li>
           <li><a href="#news">History</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="index02.html">Hello</a></li>
           <!-- <li>
             <a href="https://www.instagram.com/" target="_blank">
               <img class="icon" src="./img/icon-instagram.png" alt="インスタグラム">
